# Fetch-Planning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: examples.md  getting-started.md  index.md
docs/api/: config.md  environments.md  kinematics.md  planning.md  trajectory.md  types.md  utilities.md
docs/planning/: cost.md  index.md  manifold.md  subgroup.md  trajectory.md
examples/: constrained_ik_example.py  constrained_ik_example_vis.py  ik_example.py  ik_example_vis.py  motion_planning_example.py  multilevel_single_step.py  nonholonomic_demo.py  rls_pick_place_demo.py  subgroup_planning_example.py  trac_ik_example_vis.py
examples/constrained_planning/: _shared.py  line_horizontal.py  line_vertical.py  orientation_lock.py  plane.py  plane_with_obstacle.py
examples/demos/: rls_pick_place.py
examples/ik/: basic.py  basic_vis.py  constrained.py  constrained_vis.py  trac_ik_vis.py
examples/planning/: motion.py  multilevel_single_step.py  nonholonomic.py  subgroup.py  time_parameterization.py
examples/planning/constrained/: _shared.py  line_horizontal.py  line_vertical.py  orientation_lock.py  plane.py  plane_with_obstacle.py
examples/planning/cost/: _shared.py  line_horizontal.py  line_vertical.py  orientation_lock.py  plane.py  plane_with_obstacle.py
ext/ompl_vamp/: compiled_constraint.hpp  compiled_cost.hpp  ompl_vamp_ext.cpp  plan_decomposed.hpp  planner.hpp  validity.hpp
ext/ompl_vamp/include/vamp/robots/: fetch_base.hh
ext/time_parameterization/: time_parameterization_ext.cpp  totg.cpp  totg.hpp
fetch_planning/: _ompl_vamp.pyi  _time_parameterization.pyi  fetch.py
fetch_planning/config/: ik_config.py  robot_config.py
fetch_planning/dataclass/: ik_types.py  planning_context.py  robot_description.py
fetch_planning/envs/: pybullet_env.py
fetch_planning/kinematics/: __init__.py  ik_solver_base.py  ikfast_solver.py  pink_ik_solver.py  pinocchio_fk.py  trac_ik_solver.py
fetch_planning/planning/: __init__.py  constraints.py  costs.py  motion_planner.py  nonholonomic_planner.py
fetch_planning/resources/robot/fetch/: fetch.urdf  fetch_base.srdf  fetch_base.urdf  fetch_whole_body.urdf
fetch_planning/trajectory/: __init__.py  totg.py  trajectory.py
fetch_planning/types/: geometry.py  planning.py
fetch_planning/utils/: rot_utils.py  video_recorder.py
scripts/: build_robot.sh  build_wheels.sh  download_assets.sh  generate_fk.sh  setup.sh  spherize_robot.sh
scripts/cricket_configs/: fetch_base.json  fetch_whole_body.json
scripts/render_videos/: render_docs_videos.py
tests/: conftest.py  test_planner_construction.py  test_public_api.py
